# sphinx-orange-book-theme

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
docs/: .gitignore  start_auto_build.sh
docs/cpp_example/: Doxyfile  generate_doxygen_xml.sh
docs/cpp_example/include/cpp_example/: example1.h
docs/source/: bibliography.bib  conf.py  index.rst  usage.md
docs/source/change-log/: index.rst  v0.1.0a2.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/source/test-pages/: index.rst  test-admonitions.rst  test-breathe.rst  test-equations.rst  test-headers.rst  test-misc-extensions.rst  test-myst-nb-jupyter.ipynb  test-myst-nb-markdown.md  test-myst-nb.ipynb  test-other-elements-in-sphinx.rst  test-page-ja.rst  test-source-codes.rst
scripts/: generate_colors.py  sphinx-orange-book-theme-colors.css.jinja
sphinx_orange_book_theme/: __init__.py
