[tool.poetry]
name = "sphinx-orange-book-theme"
version = "0.15.0"
description = "An orange version of sphinx-book-theme."
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/MusicScience37Projects/utility-libraries/sphinx-orange-book-theme"
documentation = "https://sphinx-orange-book-theme-musicscience37projects--1dc46f9ab80e60.gitlab.io/"
repository = "https://gitlab.com/MusicScience37Projects/utility-libraries/sphinx-orange-book-theme.git"
keywords = ["sphinx"]
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sphinx-book-theme = ">=1.1.3"
pydata-sphinx-theme = ">=0.16"
sphinx = ">=6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
opencv-python-headless = "^4.11.0.86"
numpy = "^2.2.5"
jinja2 = "^3.1.6"

[tool.poetry.group.doc.dependencies]
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"
doc8 = "^1.1.2"

[tool.poetry.group.test.dependencies]
breathe = "^4.36.0"
myst-nb = "^1.2.0"
jupyterlab = "^4.4.1"
ipywidgets = "^8.1.6"
ipython = "^8.31.0"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
pandas = "^2.2.3"
sphinxext-opengraph = "^0.10.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-bibtex = "^2.6.3"
# setuptools is required for sphinxcontrib-bibtex
setuptools = ">=70"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.plugins."sphinx.html_themes"]
sphinx_orange_book_theme = "sphinx_orange_book_theme"
